--- a/setup/docker/nginx/nginx.conf
+++ b/setup/docker/nginx/nginx.conf
@@ -5,12 +5,12 @@ events {
 http {
   server_tokens off;
 
-  upstream redashapp {
-    server redash:5000;
+  upstream redash {
+    server 0.0.0.0:5000;
   }
 
   server {
-    listen 80;
+    listen 8080;
 
     access_log /var/log/nginx/log/access.log;
     error_log  /var/log/nginx/log/error.log;
@@ -20,7 +20,7 @@ http {
     gzip_proxied any;
 
     location / {
-      proxy_pass http://redashapp;
+      proxy_pass http://redash;
       proxy_set_header Host $http_host;
       proxy_set_header X-Real-IP $remote_addr;
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
